--- a/GBT_RFI_Webpage/python_django_dev/templates/listings/waiting.html
+++ b/GBT_RFI_Webpage/python_django_dev/templates/listings/waiting.html
@@ -1,22 +1,68 @@
  
 <html>
+    <head>
+                        <meta name="viewport" content="width=device-width, initial-scale=1">
+                        <style>
+                        .loader {
+                          border: 16px solid #f3f3f3;
+                          border-radius: 50%;
+                          border-top: 16px solid #8557A3;
+                          width: 60px;
+                          height: 60px;
+                          -webkit-animation: spin 2s linear infinite; /* Safari */
+                          animation: spin 2s linear infinite;
+                          margin:auto;
+                          padding: 10px;
+                          display:none;
+                        }
+                        
+                        /* Safari */
+                        @-webkit-keyframes spin {
+                          0% { -webkit-transform: rotate(0deg); }
+                          100% { -webkit-transform: rotate(360deg); }
+                        }
+                        
+                        @keyframes spin {
+                          0% { transform: rotate(0deg); }
+                          100% { transform: rotate(360deg); }
+                        }
+
+                        .hide-loader{
+                            display:none;
+                        }
+                        </style>
+        </head>
     <header><title>This is title</title></header>
     <body>
-   
+    
 
-
-    <button id="DuyButton" style="background-color:purple; border-color:purple; color:white" >Submit</button>
+    <button id="DuyButton" style="background-color: #8557A3; border-color:#8557A3; color:white" >Submit</button>
     <!--Make a Button that's purple with white text-->
     
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Import Jquery, a library that ajax is a part of-->
+
+    <div class="loader" id="myloader"></div>
+   
+    <div id="loading_text" style="display:none; text-align: center;">
+        <h3>Getting your data from the database. Please wait, this may take some time.</h3>
+    </div>
+    <div id="error_text" style="display:none; text-align: center;">
+            <h3>Something went wrong with retrieving your data. Please try again.</h3>
+        </div>
+    <div id="return_text" style="display:none; text-align: center;">
+        <h3>Something went wrong with retrieving your data. Please try again.</h3>
+    </div>
+
     <script>
         document.getElementById("DuyButton").onclick = function(){submit_ajax()};
         // On click you want to submit the ajax script
 
 
         function submit_ajax(){
-            console.log("Please wait! Request working...")
+            $('#myloader').show();
+            $('#loading_text').show();
+           
             // let the user know that you're doing something
             $.ajax({
                 url:"django_save_me",
@@ -24,19 +70,51 @@
                 type: "GET",
                 //getting data, defines the http request type
 
-                data:{1:2},
+                data:{"least_freq":1372.0, "greatest_freq":1373.0},
                 // the data you submit with your request (in our case, we'd want to submit our frequency ranges and such to download)
 
-                success: function(return_value) {
-                    console.log("I'm reporting success")
+                success: function(response) {
+                    $('#myloader').hide();
+                    $('#loading_text').hide();
+                    console.log(response)
+                    var Download = 
+                    {
+                        click : function(node) {
+                            var ev = document.createEvent("MouseEvents");
+                            ev.initMouseEvent("click", true, false, self, 0, 0, 0, 0, 0, false, false, false, false, 0, null);
+                            return node.dispatchEvent(ev);
+                        },
+                        encode : function(data) {
+                                return 'data:application/octet-stream;base64,' + btoa( data );
+                        },
+                        link : function(data, name){
+                            var a = document.createElement('a');
+                            a.download = name || self.location.pathname.slice(self.location.pathname.lastIndexOf('/')+1);
+                            a.href = data || self.location.href;
+                            return a;
+                        }
+                    };
+                    Download.save = function(data, name)
+                    {
+                        this.click(
+                            this.link(
+                                this.encode( data ),
+                                name
+                            )
+                        );
+                    };
+                    Download.save(response,"RFI_data.txt")
+                    return response;
                     // on success, we will download the data (eventually))
                 },
 
                 error : function(xhr,errmsg,err){
-                    console.log("I'm reporting an error")
+                    $('#myloader').hide();
+                    $('#loading_text').hide();
+                    $('#error_text').show();
                     // on failure, let the user know there's an error
                 }
-            });
+            }); 
         };       
         
         /*
@@ -55,6 +133,9 @@
           });
         */
         </script>
+
+        
+    
     <!--
     <script>
         function redirect(){
