--- a/GBT_RFI_Webpage/python_django_dev/templates/pages/index.html
+++ b/GBT_RFI_Webpage/python_django_dev/templates/pages/index.html
@@ -105,7 +105,12 @@
                 </div>
               </div>
               <br><br><br><br>
-              <button class="button" type="Submit">Get Data</button>
+              
+            </form>
+            <!--<button class="button" type="Submit">Get Data</button>-->
+            <form action="listings/" method="get">
+                <input type="submit" value="Get Data" style="background-color: #8557A3; border-color: #8557A3; color: white;"
+                     name="Submit" id="frm1_submit" />
             </form>
           </div>
         </div>
