--- a/GBT_RFI_Webpage/python_django_dev/templates/listings/listings.html
+++ b/GBT_RFI_Webpage/python_django_dev/templates/listings/listings.html
@@ -4,6 +4,38 @@
 
 {% block content %}
 
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+    .loader {
+      border: 16px solid #f3f3f3;
+      border-radius: 50%;
+      border-top: 16px solid #8557A3;
+      width: 60px;
+      height: 60px;
+      -webkit-animation: spin 2s linear infinite; /* Safari */
+      animation: spin 2s linear infinite;
+      margin:auto;
+      padding: 10px;
+      display:none;
+    }
+    
+    /* Safari */
+    @-webkit-keyframes spin {
+      0% { -webkit-transform: rotate(0deg); }
+      100% { -webkit-transform: rotate(360deg); }
+    }
+    
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    .hide-loader{
+        display:none;
+    }
+    </style>
+</head>
 
 <h1>Listings</h1>
 
@@ -18,62 +50,32 @@
         </nav>
     </div>
 </section>
-<script>
-    
-</script>
-   
-    {% if data %}
-        <!--<div id="myChart" style="width:1200px;height:700px;text-align:center;"></div>-->
-        <!--<canvas id="myChart" width="400" height="300"></canvas>-->
-        <!--<script src="{% static 'js/node_modules/chart.js/dist/Chart.bundle.js' %}"></script>
-        <script src="{% static 'js/node_modules/chart.js/dist/Chart.bundle.min.js' %}"></script>
-        <script src="{% static 'js/node_modules/chartjs-plugin-zoom/chartjs-plugin-zoom.min.js' %}"></script>
-        <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
-        <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-        <div class="ct-chart ct-golden-section" id="chart1"></div>-->
-        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-        <div id="tester" style="width:600px;height:250px;"></div>
-        <!--
-        <script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<!-- Import Jquery, a library that ajax is a part of-->
 
-                var listings = "{{data}}";
-                console.log(listings)
-                //listings = listings.split('&quot;').join('\"');
-                listings = (JSON.parse(listings));
-                console.log(listings)
-                var listing;
-                var frequencies = [];
-                var intensities = [];
-                for (listing=0; listing < (listings.length); listing++){
-                  frequencies.push(listings[listing][0]);
-                  intensities.push(listings[listing][1]);
-                }
-                TESTER = document.getElementById('tester');
-                Plotly.plot( TESTER, [{
-                x: frequencies,
-                y: intensities }], {
-                margin: { t: 0 } } );
-            </script>
-        -->
-        
+<div class="loader" id="myloader"></div>
 
-    {% else %}
-    <div class="col-md-12">
-        <p> Sorry, no scans matched your search. Please try broadening your search parameters.</p>
+<div id="loading_text" style="display:none; text-align: center;">
+    <h3>Getting your data from the database. Please wait, this may take some time.</h3>
+</div>
+<div id="error_text" style="display:none; text-align: center;">
+        <h3>Something went wrong with retrieving your data. Please try again.</h3>
     </div>
-    
-    {% endif %}
+<div id="return_text" style="display:none; text-align: center;">
+    <br><br>
+    <h3>Your data has been retrieved. Please scroll down to select your download preferences.</h3>
+    <br><br>
+</div>
 
 
 
-<script>
-
-  
-  
-</script>
 
 <br><br><br><br><br><br>
 
+<div id="tester" style="width:800px;height:600px;border: 5px solid purple; padding: 100px; margin:auto; background-color: lightgrey;text-align:center;">
+    <br><br><br><br><br><h3>Interactive graphs of data is a feature we hope to implement here soon!</h3>
+</div>
+<br><br>
 <h2 style='text-align:center'>Choose Files to Download:</h2>
 
 
@@ -83,7 +85,77 @@
   <input type="checkbox" name="file4" value="median" > Median  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <input type="checkbox" name="file5" value="mode" > Mode &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <input type="checkbox" name="file6" value="individual" > Individual files <br><br>
-  <button class="button" type="Submit" style="position:relative;top:50%;left:50%;margin: -20px -75px; ">Download Data</button>
+  <button class="button" style="position:relative;top:50%;left:50%;margin: -20px -75px; ">Download Data</button>
+
+  <script>
+        var Download = 
+        {
+            click : function(node) {
+                var ev = document.createEvent("MouseEvents");
+                ev.initMouseEvent("click", true, false, self, 0, 0, 0, 0, 0, false, false, false, false, 0, null);
+                return node.dispatchEvent(ev);
+            },
+            encode : function(data) {
+                    return 'data:application/octet-stream;base64,' + btoa( data );
+            },
+            link : function(data, name){
+                var a = document.createElement('a');
+                a.download = name || self.location.pathname.slice(self.location.pathname.lastIndexOf('/')+1);
+                a.href = data || self.location.href;
+                return a;
+            }
+        };
+        Download.save = function(data, name)
+        {
+            this.click(
+                this.link(
+                    this.encode( data ),
+                    name
+                )
+            );
+        };
+  </script>
+
+
+  <script>
+        //var return_first = function(){submit_ajax()};
+        window.onload = function(){submit_ajax()};
+        // Once the page has loaded you want to submit the ajax script
+    
+    
+        function submit_ajax(){
+            $('#myloader').show();
+            $('#loading_text').show();
+           
+            // let the user know that you're doing something
+            $.ajax({
+                url:"django_save_me",
+                //calls the django_save_me view
+                type: "GET",
+                //getting data, defines the http request type
+    
+                data:{"least_freq":1372.0, "greatest_freq":1373.0},
+                // the data you submit with your request (in our case, we'd want to submit our frequency ranges and such to download)
+    
+                success: function(response) {
+                    $('#myloader').hide();
+                    $('#loading_text').hide(); 
+                    $('#return_text').show();                
+                    Download.save(response,"RFI_data.txt")
+                    // on success, we will download the data
+                },
+    
+                error : function(xhr,errmsg,err){
+                    $('#myloader').hide();
+                    $('#loading_text').hide();
+                    $('#error_text').show();
+                    // on failure, let the user know there's an error
+                }
+            }); 
+            return response;
+        };       
+        
+        </script>
 
 
 {% endblock %}
