--- a/GBT_RFI_Webpage/python_django_dev/templates/pages/index.html
+++ b/GBT_RFI_Webpage/python_django_dev/templates/pages/index.html
@@ -105,6 +105,20 @@
                 </div>
               </div>
               <br><br><br><br>
+
+              <h2 style='text-align:center'>Choose Files to Download:</h2>
+
+
+  <!--<input type="checkbox" name="file1" value="fits" > .fits file &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     -->    
+  <input type="checkbox" name="file2" value="txt" > .txt file <br><br>
+  <input type="checkbox" name="file2" value="txt" > .csv file <br><br>
+
+  <h3 style='text-align:center'>More Download Options Coming Soon!</h3>
+ <!--<input type="checkbox" name="file3" value="mean" > Mean  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <input type="checkbox" name="file4" value="median" > Median  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <input type="checkbox" name="file5" value="mode" > Mode &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <input type="checkbox" name="file6" value="individual" > Individual files <br><br>
+  <button class="button" style="position:relative;top:50%;left:50%;margin: -20px -75px; ">Download Data</button>-->
               
             </form>
             <!--<button class="button" type="Submit">Get Data</button>-->
