--- a/GBT_RFI_Webpage/python_django_dev/templates/pages/index.html
+++ b/GBT_RFI_Webpage/python_django_dev/templates/pages/index.html
@@ -19,7 +19,7 @@
           <br><br>
           <div class="search">
             <form action="{% url 'listings' %}" method="GET">
-              <!-- Form Row 1 -->
+              <!-- Search by receiver -->
               <div class="form-row">
                     <label style="text-align: left;">Search by Receiver</label>
                     <select id='receiver' name="receiver" class="form-control">
@@ -29,17 +29,17 @@
                         {% endfor %}
                     </select>
                   </div>
-
+                  <!-- Search by filename -->
                   <div class="col-md-6 mb-3">
                         <label style="text-align:left;">Search by Filename</label>
                         <input type="text" id="filename" name="filename" placeholder="Any Filename">
                        </div>
-
+                       <!-- Search by Project ID-->
                        <div class="form-row">
                             <label style="text-align:left;">Search by Project ID</label>
                             <input type="text" id="projid" name="projid" placeholder="Any Project">
                            </div>
-    
+                <!-- Search by oldest and newest scan date: -->
                 <div class="col-md-4 mb-3" style="float:left;">
                   <label>Oldest Scan Date</label>
                   <input type="date" id="oldest_scan_date" name="oldest_scan_date" class="form-control" style="width:200px;">
@@ -51,7 +51,7 @@
                 </div>
                 <br><br><br><br>
   
-
+                <!-- Search by Azimuth -->
                 <div class="col-md-4 mb-3" style="float:left;">
                     <label >Azimuth Min (deg)</label>
                     <input type="number" id="azimuth_min" name="azimuth_min" min="0" max="360" >
@@ -63,7 +63,7 @@
                     </div>
 
                 <br><br><br><br>
-
+                <!-- Search by azimuth -->
                 <div class="col-md-4 mb-3" style="float:left;">
                         <label >Elevation Min (deg)</label>
                         <input type="number" id="elevation_min" name="elevation_min" min="0" max="90" >
@@ -76,9 +76,7 @@
 
                         <br><br><br><br>
 
-
-
-
+                <!-- Search by Frequency -->
                 <div class="col-md-4 mb-3" style="float:left;">
                     <label >Frequency Min (MHz)</label>
                     <input type="number" id="frequency_min" name="frequency_min" min="0" >
