--- a/GBT_RFI_Webpage/python_django_dev/templates/pages/index.html
+++ b/GBT_RFI_Webpage/python_django_dev/templates/pages/index.html
@@ -75,7 +75,7 @@
 
                 <div class="col-md-4 mb-3" style="float:left;">
                 <br>
-                <label>Choose Latest Project Only</label>
+                <label>Choose Latest Observation</label>
                 </div>
 
                 <br><br><br><br>
