made python app linked to github repo

--- a/GBT_RFI_Webpage/python_django_dev/templates/listings/listings.html
+++ b/GBT_RFI_Webpage/python_django_dev/templates/listings/listings.html
@@ -76,7 +76,14 @@
     <br><br>
 </div>
 
+<br><br>
 
+<div style='text-align: center;'>
+<a href = "https://github.com/JoySkipper/GBT_RFI_Grapher/archive/v1.0.zip" download>
+<input type="button" value="Download Script to Graph your Data" style="background-color: #8557A3; border-color: #8557A3; color: white;"
+name="python_download" style='float:center'/> 
+</a>
+</div>
 
 <br><br><br><br><br><br>
 
