removed projid functionality (ran out of time)

--- a/GBT_RFI_Webpage/python_django_dev/templates/pages/index.html
+++ b/GBT_RFI_Webpage/python_django_dev/templates/pages/index.html
@@ -52,11 +52,14 @@
                         {% endfor %}
                     </select>
                   </div>
-                       <!-- Search by Project ID-->
+                  
+                       <!-- Search by Project ID
                        <div class="form-row">
                             <label style="text-align:left;">Project ID</label>
                             <input type="text" id="projid" name="projid" placeholder="Any Project" disabled>
                            </div>
+
+                   -->
                 <!-- Search by oldest and newest scan date: -->
                 <div class="col-md-4 mb-3" style="float:left;">
                   <label>Oldest Scan Date</label>
