--- a/GBT_RFI_Webpage/python_django_dev/templates/pages/index.html
+++ b/GBT_RFI_Webpage/python_django_dev/templates/pages/index.html
@@ -14,13 +14,13 @@
             //Set the disabled property to FALSE and enable the button.
             document.getElementById("oldest_scan_date").disabled = true;
             document.getElementById("newest_scan_date").disabled = true;
-            document.getElementById("projid").disabled = true;
+            // document.getElementById("projid").disabled = true;
             document.getElementById("unchecked_warning").style.display = "none";
         } else{
             //Otherwise, disable the submit button.
             document.getElementById("oldest_scan_date").disabled = false;
             document.getElementById("newest_scan_date").disabled = false;
-            document.getElementById("projid").disabled = false;
+            // document.getElementById("projid").disabled = false;
             document.getElementById("unchecked_warning").style.display = "block";
         }
     }
